# acc

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  init.sh  pyproject.toml  requirements.in  requirements.txt  requirements_dev.in  requirements_dev.txt
apps/accounting/: admin.py  apps.py  factory.py  managers.py  models.py  serializers.py  views.py
apps/accounting/management/commands/: setup_accounting.py
apps/accounting/migrations/: 0001_initial.py  0002_journalentry_journalentryline.py  0003_alter_account_options_account_order_and_more.py
apps/address/: apps.py  models.py  serializers.py
apps/address/migrations/: 0001_initial.py
apps/department/: apps.py  models.py  serializers.py  views.py
apps/department/migrations/: 0001_initial.py
apps/inventory/item/: apps.py  models.py  serializers.py  views.py
apps/organisation/: admin.py  apps.py  models.py  serializers.py  tasks.py  views.py
apps/organisation/migrations/: 0001_initial.py  0002_initial.py  0003_organisation_task_id.py
apps/purchase/bill/: admin.py  apps.py  managers.py  models.py  serializers.py  views.py
apps/purchase/expense/: apps.py  models.py  serializers.py  views.py
apps/sales/client/: apps.py  models.py  serializers.py  views.py
apps/sales/invoice/: apps.py  managers.py  models.py  serializers.py  views.py
apps/tax/: apps.py  models.py  serializers.py  views.py
apps/tax/migrations/: 0001_initial.py
apps/user/: admin.py  apps.py  models.py  serializers.py  views.py
apps/user/migrations/: 0001_initial.py
core/: abstract_models.py  permissions.py  settings.py  urls.py  urls_public.py  utils.py
core/serializers/: fields.py  utils.py
tests/: conftest.py  test_accounting.py  test_bill.py  test_client.py  test_department.py  test_expense.py  test_inventory.py  test_invoice.py  test_organisation.py  test_tax.py  test_user.py  test_vendor.py
tests/fixtures/: setup.py
tests/fixtures/data/: accounting.py  department.py  general.py  inventory.py  organisation.py  purchase.py  sales.py  user.py
(+6 files in other folders)
