[tool.poetry]
name = "acc"
version = "0.1.0"
description = "Double-entry Accounting REST API"
authors = ["Posi Adedeji <posiadedeji05@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
django = "^4.2"
python-decouple = "^3.8"
psycopg = {version = "^3.1.8", extras = ["binary"]}
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.4.0"
django-tenants = "^3.7.0"
django-tenant-users = "^2.0.0"
drf-spectacular = "^0.28.0"
django-filter = "^24.3"
celery = {version = ">=4.45,<6.0.0", extras = ["redis"]}
django-celery-results = "^2.5.1"
gunicorn = "^23.0.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.4"
pytest = "^8.3.4"
pytest-celery = "^1.1.3"
pytest-django = "^4.9.0"
coverage = "^7.6.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# run 'ruff linter' to see meanings
extend-select = ["C4", "C90", "DJ", "I", "SIM", "TCH", "UP"]
ignore = ["E402", "F405", "B905", "I001", "N818", "S101"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F"]
unfixable = []
show-fixes = true

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".env",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "env",
]
per-file-ignores = {}
line-length = 99
target-version = "py37"

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
filterwarnings = ["ignore::django.utils.deprecation.RemovedInDjango60Warning",]
